[project]
name = "lps"
version = "0.1.0"
description = "Load Pattern Simulator (LPS)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "LPS Contributors" }]
dependencies = [
  "duckdb>=1.0.0",
  "httpx>=0.27.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "plotly>=5.22.0",
  "streamlit>=1.37.0",
  "typing-extensions>=4.12.0",
]

[project.optional-dependencies]
dev = [
  "hypothesis>=6.100.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[project.scripts]
lps = "lps.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
